Improvement/add value for rsync options (#166)
* Update values.yaml

Signed-off-by: Frédéric COELHO <frederic.coelho@gmail.com>

* add value rsync options to configmap-script

Signed-off-by: Frédéric COELHO <frederic.coelho@gmail.com>

* Update README.md

Signed-off-by: Frédéric COELHO <frederic.coelho@gmail.com>

* Update Chart version

Signed-off-by: Frédéric COELHO <frederic.coelho@gmail.com>

* improve configration format in values

Signed-off-by: Frédéric COELHO <frederic.coelho@gmail.com>

* improve value format in script

Signed-off-by: Frédéric COELHO <frederic.coelho@gmail.com>

* Update README.md

Signed-off-by: Frédéric COELHO <frederic.coelho@gmail.com>

* fix indent

Signed-off-by: Frédéric COELHO <frederic.coelho@gmail.com>

---------

Signed-off-by: Frédéric COELHO <frederic.coelho@gmail.com>

--- a/charts/mysqldump/templates/configmap-script.yaml
+++ b/charts/mysqldump/templates/configmap-script.yaml
@@ -69,7 +69,7 @@ data:
     {{- if or (.Values.upload.googlestoragebucket.enabled) (.Values.upload.ssh.enabled) (.Values.upload.openstack.enabled) (.Values.upload.s3.enabled) -}}
     {{ if .Values.upload.ssh.enabled -}}
     echo "upload files via ssh to {{ .Values.upload.ssh.user }}@{{ .Values.upload.ssh.host }}:{{ .Values.upload.ssh.dir }}"
-    rsync -av --delete --exclude=*.state -e 'ssh -o StrictHostKeyChecking=accept-new -o UserKnownHostsFile=/dev/null' ${BACKUP_DIR}/ {{ .Values.upload.ssh.user }}@{{ .Values.upload.ssh.host }}:{{ .Values.upload.ssh.dir }}
+    rsync {{ .Values.rsync.options }} --delete --exclude=*.state -e 'ssh -o StrictHostKeyChecking=accept-new -o UserKnownHostsFile=/dev/null' ${BACKUP_DIR}/ {{ .Values.upload.ssh.user }}@{{ .Values.upload.ssh.host }}:{{ .Values.upload.ssh.dir }}
     rcu=$?
     {{ end -}}
 
