--- a/charts/visual-regression-tracker/templates/configmap.yaml
+++ b/charts/visual-regression-tracker/templates/configmap.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: env-config
+  labels:
+    {{- include "visual-regression-tracker.labels" . | nindent 4 }}
 data:
   env.sh: |
     #!/bin/sh
@@ -10,6 +12,6 @@ data:
   env-config.js: |
     window._env_ = {
         REACT_APP_API_URL: "{{ .Values.vrtConfig.reactAppApiUrl }}",
-        PORT: "{{ .Values.ui.service.port }}",
+        PORT: "{{ .Values.vrtComponents.ui.service.port }}",
         VRT_VERSION: "{{ .Chart.AppVersion }}",
     }
