update vrt to 5.0 (#171)
* update vrt to 5.0

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* change env setup to configmap

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* remove hardcoding

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* adjust comment

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* fix var and add labels

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* fix volume

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* fix volumemounts

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* fix permissions

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* add tmp mount

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* test

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* make tmpdir configurable

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

---------

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

--- a/charts/visual-regression-tracker/values.yaml
+++ b/charts/visual-regression-tracker/values.yaml
@@ -34,7 +34,7 @@ vrtComponents:
     image:
       repository: visualregressiontracker/api
       pullPolicy: IfNotPresent
-      tag: "4.20.4"
+      tag: "5.0.4"
 
     ingress:
       enabled: false
@@ -79,7 +79,7 @@ vrtComponents:
     image:
       repository: visualregressiontracker/migration
       pullPolicy: IfNotPresent
-      tag: "4.20.1"
+      tag: "5.0.1"
 
     imagePullSecrets: []
 
@@ -106,7 +106,7 @@ vrtComponents:
     image:
       repository: visualregressiontracker/ui
       pullPolicy: IfNotPresent
-      tag: "4.20.5"
+      tag: "5.0.2"
 
     ingress:
       enabled: false
@@ -146,6 +146,10 @@ vrtComponents:
     service:
       type: ClusterIP
       port: 8080
+
+    tmpDirVolume:
+      emptyDir:
+        sizeLimit: 100Mi
 
 # Configuration for persistence
 persistence:
