--- a/charts/visual-regression-tracker/templates/statefulset.yaml
+++ b/charts/visual-regression-tracker/templates/statefulset.yaml
@@ -143,6 +143,16 @@ spec:
           volumeMounts:
             - name: {{ template "visual-regression-tracker.fullname" . }}
               mountPath: /usr/share/nginx/html/static/imageUploads
+            - name: env-config
+              mountPath: /usr/share/nginx/html/env.sh
+              subPath: env.sh
+            - name: env-config
+              mountPath: /usr/share/nginx/html/env-config.js
+              subPath: env-config.js
+            - name: tmp
+              mountPath: /var/cache/nginx
+            - name: tmp
+              mountPath: /var/run
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -159,13 +169,18 @@ spec:
       topologySpreadConstraints: 
         {{- toYaml .Values.topologySpreadConstraints | nindent 8 }}
       {{- end }}
-  {{- if and .Values.persistence.enabled .Values.persistence.existingClaim }}
       volumes:
+        - name: env-config
+          configMap:
+            name: env-config
+            defaultMode: 0777
+        - name: tmp
+          {{- toYaml .Values.vrtComponents.ui.tmpDirVolume | nindent 10 }}
+    {{- if and .Values.persistence.enabled .Values.persistence.existingClaim }}
         - name: {{ template "visual-regression-tracker.fullname" . }}
           persistentVolumeClaim:
             claimName: {{ .Values.persistence.existingClaim | default (include "visual-regression-tracker.fullname" .) }}
   {{- else if not .Values.persistence.enabled }}
-      volumes:
         - name: {{ template "visual-regression-tracker.fullname" . }}
           emptyDir: {}
   {{- else if and .Values.persistence.enabled (not .Values.persistence.existingClaim) }}
