vrt - add seed support
Signed-off-by: André Bauer <andre.bauer@staffbase.com>

--- a/charts/visual-regression-tracker/templates/secrets.yaml
+++ b/charts/visual-regression-tracker/templates/secrets.yaml
@@ -34,3 +34,15 @@ type: Opaque
 data:
   {{ .Values.secrets.postgresql.secretKey }}: {{ .Values.vrtConfig.postgresql.pass | b64enc | quote }}
 {{ end }}
+{{ if and (or .Values.vrtConfig.defaults.apiKey .Values.vrtConfig.defaults.pass) (not .Values.secrets.defaults.useExisting) }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ template "visual-regression-tracker.vrtSecretName" . }}
+  labels:
+    {{- include "visual-regression-tracker.labels" . | nindent 4 }}
+type: Opaque
+data:
+  {{ .Values.secrets.defaults.secretKey }}: {{ tpl (.Files.Get "files/seed.ts") $ | b64enc }}
+{{ end }}
