fix checkov gha
Signed-off-by: André Bauer <andre.bauer@staffbase.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,5 +1,7 @@
 name: Release Charts
 
+permissions: read-all
+
 on:
   push:
     branches:
@@ -10,6 +12,10 @@ env:
 
 jobs:
   release:
+    permissions:
+      contents: write # to push chart release and create a release (helm/chart-releaser-action)
+      packages: write # needed for ghcr access
+      id-token: write # needed for keyless signing
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
