--- a/charts/mysqldump/Chart.yaml
+++ b/charts/mysqldump/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 version: 6.4.0
-appVersion: v3.2.ß
+appVersion: v3.2.0
 description: A Helm chart to help backup MySQL databases using mysqldump
 name: mysqldump
 keywords:
