make api url a secret
Signed-off-by: André Bauer <andre.bauer@staffbase.com>

--- a/charts/visual-regression-tracker/templates/secrets.yaml
+++ b/charts/visual-regression-tracker/templates/secrets.yaml
@@ -46,3 +46,15 @@ type: Opaque
 data:
   {{ .Values.secrets.defaults.secretKey }}: {{ tpl (.Files.Get "files/seed.ts") $ | b64enc }}
 {{ end }}
+{{ if and .Values.vrtConfig.reactAppApiUrl (not .Values.secrets.apiUrl.useExisting) }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ template "visual-regression-tracker.vrtApiUrlSecretName" . }}
+  labels:
+    {{- include "visual-regression-tracker.labels" . | nindent 4 }}
+type: Opaque
+data:
+  {{ .Values.secrets.apiUrl.secretKey }}: {{ .Values.vrtConfig.reactAppApiUrl | b64enc | quote }}
+{{ end }}
