--- a/charts/visual-regression-tracker/values.yaml
+++ b/charts/visual-regression-tracker/values.yaml
@@ -39,7 +39,7 @@ vrtComponents:
     image:
       repository: visualregressiontracker/api
       pullPolicy: IfNotPresent
-      tag: "5.0.4"
+      tag: "5.0.5"
 
     ingress:
       enabled: false
@@ -171,6 +171,10 @@ persistence:
   annotations: {}
 
 secrets:
+  apiUrl:
+    useExisting: false
+    secretKey: api-url
+    secretName: vrt-api-url
   defaults:
     useExisting: false
     secretName: vrt
