--- a/charts/visual-regression-tracker/templates/ingress-ui.yaml
+++ b/charts/visual-regression-tracker/templates/ingress-ui.yaml
@@ -15,7 +15,7 @@ apiVersion: extensions/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
-  name: {{ $fullName }}
+  name: "{{ $fullName }}-ui"
   labels:
     {{- include "visual-regression-tracker.labels" . | nindent 4 }}
   {{- with .Values.vrtComponents.ui.ingress.annotations }}
