--- a/charts/visual-regression-tracker/templates/configmap.yaml
+++ b/charts/visual-regression-tracker/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: env-config
+  name: {{ include "visual-regression-tracker.fullname" . }}-env-config
   labels:
     {{- include "visual-regression-tracker.labels" . | nindent 4 }}
 data:
