--- a/charts/visual-regression-tracker/templates/statefulset.yaml
+++ b/charts/visual-regression-tracker/templates/statefulset.yaml
@@ -121,11 +121,13 @@ spec:
               mountPath: /imageUploads
         - name: {{ .Chart.Name }}-ui
           env:
-            - name: REACT_APP_API_URL
+            - name: BASIC_AUTH_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: {{ template "visual-regression-tracker.vrtApiUrlSecretName" . }}
-                  key: {{ .Values.secrets.apiUrl.secretKey }}
+                  name: {{ template "visual-regression-tracker.authProxySecretName" . }}
+                  key: {{ .Values.secrets.authProxy.secretKey }}
+            - name: REACT_APP_API_URL
+              value: "{{ .Values.vrtConfig.reactAppApi.protocol }}://{{ .Values.authProxy.basicAuth.username }}:$(BASIC_AUTH_PASSWORD)@{{ .Values.vrtConfig.reactAppApi.protocol }}"
             - name: VRT_VERSION
               value: "{{ .Chart.AppVersion }}"
           image: "{{ .Values.vrtComponents.ui.image.repository }}:{{ .Values.vrtComponents.ui.image.tag }}"
@@ -148,7 +150,7 @@ spec:
           securityContext:
             {{- toYaml .Values.vrtComponents.ui.securityContext | nindent 12 }}
           volumeMounts:
-            - name: {{ template "visual-regression-tracker.fullname" . }}
+            - name: env-config
               mountPath: /usr/share/nginx/html/static/imageUploads
             - name: env-config
               mountPath: /usr/share/nginx/html/env.sh
@@ -179,7 +181,7 @@ spec:
       volumes:
         - name: env-config
           configMap:
-            name: env-config
+            name: {{ include "visual-regression-tracker.fullname" . }}-env-config
             defaultMode: 0777
         - name: tmp
           {{- toYaml .Values.vrtComponents.ui.tmpDirVolume | nindent 10 }}
