--- a/charts/visual-regression-tracker/values.yaml
+++ b/charts/visual-regression-tracker/values.yaml
@@ -3,6 +3,86 @@ fullnameOverride: ""
 
 imagePullSecrets: []
 
+authProxy:
+  replicaCount: 1
+  
+  basicAuth:
+    username: api-user
+    password: "ChangeTheApiPassword!"
+
+  initContainer:
+    image:
+      repository: httpd
+      pullPolicy: IfNotPresent
+      tag: "2.4.59"
+    resources: {}
+      # We usually recommend not to specify default resources and to leave this as a conscious
+      # choice for the user. This also increases chances charts run on environments with little
+      # resources, such as Minikube. If you do want to specify resources, uncomment the following
+      # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+      # limits:
+      #   cpu: 100m
+      #   memory: 128Mi
+      # requests:
+      #   cpu: 100m
+      #   memory: 128Mi
+    securityContext:
+      allowPrivilegeEscalation: false
+      capabilities:
+        drop:
+          - ALL
+      privileged: false
+
+  image:
+    repository: nginxinc/nginx-unprivileged
+    pullPolicy: IfNotPresent
+    tag: "1.27.0-alpine3.19"
+
+  ingress:
+    enabled: false
+    className: ""
+    annotations: {}
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"
+    hosts:
+      - host: chart-example.local
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    tls: []
+    #  - secretName: chart-example-tls
+    #    hosts:
+    #      - chart-example.local
+
+  podAnnotations: {}
+
+  podLabels: {}
+
+  resources: {}
+    # We usually recommend not to specify default resources and to leave this as a conscious
+    # choice for the user. This also increases chances charts run on environments with little
+    # resources, such as Minikube. If you do want to specify resources, uncomment the following
+    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    # limits:
+    #   cpu: 100m
+    #   memory: 128Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 128Mi
+
+  securityContext:
+    allowPrivilegeEscalation: false
+    capabilities:
+      drop:
+        - ALL
+    privileged: false
+
+  service:
+    type: ClusterIP
+    port: 8080
+
+  tmpDirSizeLimit: 100Mi
+
 vrtConfig:
   appFrontendUrl: "http://localhost:8080"
   bodyParserJsonLimit: "5mb"
@@ -32,7 +112,10 @@ vrtConfig:
     port: 5432
     # needs to be the same as the postgresql.auth.username
     user: vrt
-  reactAppApiUrl: "http://localhost:4200"
+  reactAppApi:
+    protocol: "http"
+    url: "localhost"
+    port: "4200"
 
 vrtComponents:
   api:
@@ -40,22 +123,6 @@ vrtComponents:
       repository: visualregressiontracker/api
       pullPolicy: IfNotPresent
       tag: "5.0.5"
-
-    ingress:
-      enabled: false
-      className: ""
-      annotations: {}
-        # kubernetes.io/ingress.class: nginx
-        # kubernetes.io/tls-acme: "true"
-      hosts:
-        - host: chart-example.local
-          paths:
-            - path: /
-              pathType: ImplementationSpecific
-      tls: []
-      #  - secretName: chart-example-tls
-      #    hosts:
-      #      - chart-example.local
 
     resources: {}
       # We usually recommend not to specify default resources and to leave this as a conscious
@@ -171,14 +238,14 @@ persistence:
   annotations: {}
 
 secrets:
-  apiUrl:
+  authProxy:
     useExisting: false
-    secretKey: api-url
-    secretName: vrt-api-url
+    secretKey: password
+    secretName: auth
   defaults:
     useExisting: false
-    secretName: vrt
     secretKey: seed.ts
+    secretName: vrt
   elasticsearch:
     useExisting: false
     secretKey: es-pass
