--- a/charts/visual-regression-tracker/values.yaml
+++ b/charts/visual-regression-tracker/values.yaml
@@ -15,8 +15,7 @@ authProxy:
       repository: httpd
       pullPolicy: IfNotPresent
       tag: "2.4.59"
-    resources:
-      {}
+    resources: {}
       # We usually recommend not to specify default resources and to leave this as a conscious
       # choice for the user. This also increases chances charts run on environments with little
       # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -42,8 +41,7 @@ authProxy:
   ingress:
     enabled: false
     className: ""
-    annotations:
-      {}
+    annotations: {}
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
     hosts:
@@ -60,8 +58,7 @@ authProxy:
 
   podLabels: {}
 
-  resources:
-    {}
+  resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
     # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -127,8 +124,7 @@ vrtComponents:
       pullPolicy: IfNotPresent
       tag: "5.0.5"
 
-    resources:
-      {}
+    resources: {}
       # We usually recommend not to specify default resources and to leave this as a conscious
       # choice for the user. This also increases chances charts run on environments with little
       # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -159,8 +155,7 @@ vrtComponents:
 
     imagePullSecrets: []
 
-    resources:
-      {}
+    resources: {}
       # We usually recommend not to specify default resources and to leave this as a conscious
       # choice for the user. This also increases chances charts run on environments with little
       # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -188,8 +183,7 @@ vrtComponents:
     ingress:
       enabled: false
       className: ""
-      annotations:
-        {}
+      annotations: {}
         # kubernetes.io/ingress.class: nginx
         # kubernetes.io/tls-acme: "true"
       hosts:
@@ -202,8 +196,7 @@ vrtComponents:
       #    hosts:
       #      - chart-example.local
 
-    resources:
-      {}
+    resources: {}
       # We usually recommend not to specify default resources and to leave this as a conscious
       # choice for the user. This also increases chances charts run on environments with little
       # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -278,8 +271,7 @@ podAnnotations: {}
 
 podLabels: {}
 
-podDisruptionBudget:
-  {}
+podDisruptionBudget: {}
   # maxUnavailable: 1
 
 podSecurityContext:
@@ -309,8 +301,7 @@ postgresql:
     username: vrt
     password: vrt-db-password
   fullnameOverride: vrt-postgresql
-  resources:
-    {}
+  resources: {}
     # limits:
     #   cpu: 50m
     #   memory: 64Mi
