--- a/charts/visual-regression-tracker/values.yaml
+++ b/charts/visual-regression-tracker/values.yaml
@@ -114,8 +114,7 @@ vrtConfig:
     user: vrt
   reactAppApi:
     protocol: "http"
-    url: "localhost"
-    port: "4200"
+    url: "localhost:4200"
 
 vrtComponents:
   api:
