--- a/charts/visual-regression-tracker/templates/auth-proxy-deployment.yaml
+++ b/charts/visual-regression-tracker/templates/auth-proxy-deployment.yaml
@@ -82,6 +82,8 @@ spec:
               mountPath: /etc/nginx/conf.d/default.conf
               subPath: default.conf
               readOnly: true
+      securityContext:
+        {{- toYaml .Values.authProxy.podSecurityContext | nindent 8 }}
       volumes:
         - name: tmpdir
           emptyDir:
