--- a/charts/visual-regression-tracker/templates/auth-proxy-deployment.yaml
+++ b/charts/visual-regression-tracker/templates/auth-proxy-deployment.yaml
@@ -84,6 +84,10 @@ spec:
               readOnly: true
       securityContext:
         {{- toYaml .Values.authProxy.podSecurityContext | nindent 8 }}
+      {{- if .Values.authProxy.topologySpreadConstraints }}
+      topologySpreadConstraints: 
+        {{- toYaml .Values.authProxy.topologySpreadConstraints | nindent 8 }}
+      {{- end }}
       volumes:
         - name: tmpdir
           emptyDir:
