make env-config.js a secret
Signed-off-by: André Bauer <andre.bauer@staffbase.com>

--- a/charts/visual-regression-tracker/templates/auth-proxy-deployment.yaml
+++ b/charts/visual-regression-tracker/templates/auth-proxy-deployment.yaml
@@ -37,9 +37,9 @@ spec:
             - -c
             - /tmp/htpass
             - {{ .Values.authProxy.basicAuth.username }}
-            - $(AUTH_SECRET)
+            - $(BASIC_AUTH_SECRET)
           env:
-            - name: AUTH_SECRET
+            - name: BASIC_AUTH_SECRET
               valueFrom:
                 secretKeyRef:
                   name: {{ template "visual-regression-tracker.authProxySecretName" . }}
