--- a/charts/visual-regression-tracker/templates/secrets.yaml
+++ b/charts/visual-regression-tracker/templates/secrets.yaml
@@ -1,3 +1,13 @@
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ template "visual-regression-tracker.envSecretName" . }}
+  labels:
+    {{- include "visual-regression-tracker.labels" . | nindent 4 }}
+type: Opaque
+data:
+  env-config.js: {{ tpl (.Files.Get "files/env-config.js") $ | b64enc }}
 {{ if and .Values.vrtConfig.elasticsearch.pass (not .Values.secrets.elasticsearch.useExisting) }}
 ---
 apiVersion: v1
@@ -45,4 +55,16 @@ metadata:
 type: Opaque
 data:
   {{ .Values.secrets.defaults.secretKey }}: {{ tpl (.Files.Get "files/seed.ts") $ | b64enc }}
+{{ end }}
+{{ if and (or .Values.authProxy.basicAuth.username .Values.authProxy.basicAuth.password) (not .Values.secrets.envConfig.useExisting) }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ template "visual-regression-tracker.envSecretName" . }}
+  labels:
+    {{- include "visual-regression-tracker.labels" . | nindent 4 }}
+type: Opaque
+data:
+  {{ .Values.secrets.envConfig.secretKey }}: {{ tpl (.Files.Get "files/env-config.js") $ | b64enc }}
 {{ end }}
