--- a/charts/visual-regression-tracker/templates/statefulset.yaml
+++ b/charts/visual-regression-tracker/templates/statefulset.yaml
@@ -140,9 +140,9 @@ spec:
           securityContext:
             {{- toYaml .Values.vrtComponents.ui.securityContext | nindent 12 }}
           volumeMounts:
-            - name: env-config
+            - name: env
               mountPath: /usr/share/nginx/html/static/imageUploads
-            - name: env-config
+            - name: env
               mountPath: /usr/share/nginx/html/env.sh
               subPath: env.sh
             - name: env-config
@@ -169,6 +169,10 @@ spec:
         {{- toYaml .Values.topologySpreadConstraints | nindent 8 }}
       {{- end }}
       volumes:
+        - name: env
+          configMap:
+            name: {{ include "visual-regression-tracker.fullname" . }}-env-config
+            defaultMode: 0777
         - name: env-config
           secret:
             secretName: {{ include "visual-regression-tracker.fullname" . }}-env-config
