[vrt] make env-config.js a secret (#189)
* make env-config.js a secret

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* fix

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* mount

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

* disup

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

---------

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

--- a/charts/visual-regression-tracker/templates/statefulset.yaml
+++ b/charts/visual-regression-tracker/templates/statefulset.yaml
@@ -120,16 +120,6 @@ spec:
             - name: {{ template "visual-regression-tracker.fullname" . }}
               mountPath: /imageUploads
         - name: {{ .Chart.Name }}-ui
-          env:
-            - name: BASIC_AUTH_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ template "visual-regression-tracker.authProxySecretName" . }}
-                  key: {{ .Values.secrets.authProxy.secretKey }}
-            - name: REACT_APP_API_URL
-              value: "{{ .Values.vrtConfig.reactAppApi.protocol }}://{{ .Values.authProxy.basicAuth.username }}:$(BASIC_AUTH_PASSWORD)@{{ .Values.vrtConfig.reactAppApi.url }}"
-            - name: VRT_VERSION
-              value: "{{ .Chart.AppVersion }}"
           image: "{{ .Values.vrtComponents.ui.image.repository }}:{{ .Values.vrtComponents.ui.image.tag }}"
           imagePullPolicy: {{ .Values.vrtComponents.ui.image.pullPolicy }}
           ports:
@@ -150,9 +140,9 @@ spec:
           securityContext:
             {{- toYaml .Values.vrtComponents.ui.securityContext | nindent 12 }}
           volumeMounts:
-            - name: env-config
+            - name: env
               mountPath: /usr/share/nginx/html/static/imageUploads
-            - name: env-config
+            - name: env
               mountPath: /usr/share/nginx/html/env.sh
               subPath: env.sh
             - name: env-config
@@ -179,10 +169,13 @@ spec:
         {{- toYaml .Values.topologySpreadConstraints | nindent 8 }}
       {{- end }}
       volumes:
-        - name: env-config
+        - name: env
           configMap:
             name: {{ include "visual-regression-tracker.fullname" . }}-env-config
             defaultMode: 0777
+        - name: env-config
+          secret:
+            secretName: {{ include "visual-regression-tracker.fullname" . }}-env-config
         - name: tmp
           {{- toYaml .Values.vrtComponents.ui.tmpDirVolume | nindent 10 }}
         - name: vrt
