--- a/charts/visual-regression-tracker/templates/statefulset.yaml
+++ b/charts/visual-regression-tracker/templates/statefulset.yaml
@@ -121,13 +121,8 @@ spec:
               mountPath: /imageUploads
         - name: {{ .Chart.Name }}-ui
           env:
-            - name: BASIC_AUTH_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name:  {{ template "visual-regression-tracker.authProxySecretName" . }}
-                  key: {{ .Values.secrets.authProxy.secretKey }}
             - name: REACT_APP_API_URL
-              value: "{{ .Values.vrtConfig.reactAppApi.protocol }}://{{ .Values.authProxy.basicAuth.username }}:$(BASIC_AUTH_PASSWORD)@{{ .Values.vrtConfig.reactAppApi.url }}"
+              value: "{{ .Values.vrtConfig.reactAppApiUrl }}"
             - name: VRT_VERSION
               value: "{{ .Chart.AppVersion }}"
           image: "{{ .Values.vrtComponents.ui.image.repository }}:{{ .Values.vrtComponents.ui.image.tag }}"
