--- a/charts/visual-regression-tracker/values.yaml
+++ b/charts/visual-regression-tracker/values.yaml
@@ -130,10 +130,7 @@ vrtConfig:
     port: 5432
     # needs to be the same as the postgresql.auth.username
     user: vrt
-  reactAppApi:
-    # the basic auth username & password are included automaticaly
-    protocol: "http"
-    url: "localhost:4200"
+  reactAppApiUrl: "http://localhost:4200"
 
 vrtComponents:
   api:
