--- a/charts/visual-regression-tracker/templates/secrets.yaml
+++ b/charts/visual-regression-tracker/templates/secrets.yaml
@@ -46,7 +46,7 @@ type: Opaque
 data:
   {{ .Values.secrets.defaults.secretKey }}: {{ tpl (.Files.Get "files/seed.ts") $ | b64enc }}
 {{ end }}
-{{ if and (or .Values.authProxy.basicAuth.username .Values.authProxy.basicAuth.password) (not .Values.secrets.envConfig.useExisting) }}
+{{ if not .Values.secrets.envConfig.useExisting }}
 ---
 apiVersion: v1
 kind: Secret
