--- a/charts/mysqldump/values.yaml
+++ b/charts/mysqldump/values.yaml
@@ -3,8 +3,8 @@
 # Declare variables to be passed into your templates.
 
 image:
-  registry: quay.io
-  repository: monotek/gcloud-mysql
+  registry: ghcr.io
+  repository: kokuwaio/gcloud-mysql
   # uses appVersion form Chart.yaml if not set
   tag: ""
   ## Specify a imagePullPolicy
