change fluentd docker repo
Signed-off-by: André Bauer <andre.bauer@staffbase.com>

--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: quay.io/fluentd_elasticsearch/fluentd
+  repository: ghcr.io/kokuwaio/fluentd-elasticsearch
   # if empty uses appVersion from Chart.yaml as default image tag
   tag: ""
   ## Specify an imagePullPolicy (Required)
